tests/activitygen/errors/testsuite.activitygen
# Check wrong input
input_error

# passenger cars are disallowed in the whole network
passenger_disallowed
